--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html>
 
 	<head>
+	
 <title> Hello World </title>
 
-<link rel="stylesheet" href="css/head.css">
+<link rel="stylesheet" href="css/font_color.css">
+<link rel="stylesheet" href="css/theme.css">
 
-<style>
-body {background-color: powderblue;}
-p    {color: green;}
-h1	 {color: yellow;}
-</style>
 	</head>
 
 
@@ -26,6 +23,8 @@ h1	 {color: yellow;}
 <p id="blue"> blue </p>
 
 <img src="img/ori.jpg">
+
+<a href="a1.html"> Assignment 1 </a>
 
 	</body>
 	
