--- a/index.html
+++ b/index.html
@@ -2,29 +2,85 @@
 
 	<head>
 	
-<title> Hello World </title>
+<title> Fred's Projects </title>
 
+<link rel="icon" href="site_icon.jpg">
 <link rel="stylesheet" href="css/font_color.css">
 <link rel="stylesheet" href="css/theme.css">
 
 	</head>
 
-
 	<body>
-<p> paragraph </p>
-<h1> font size 1 </h1>
-<h2> font size 2 </h2>
-<h3> font size 3 </h3>
-<h4> font size 4 </h4>
-<h5> font size 5 </h5>
-<h6> font size 6 </h6>
+<h1> Fred's Projects </h1>
+<h6> Download spaghetti code here</h6>
+<br>
+<h3> ICS4U0 </h3>
+<p id="title"> File Maintenance and Version Control </p>
+<a href="a0.html"> Assignment 0 </a> - Triangle Calculator
 
-<p id="p01"> green </p>
-<p id="blue"> blue </p>
+<br>
+<br>
+<p id="title"> Intro to Python </p>
+<a href="a1.html"> Assignment 1 </a> - 
 
-<img src="img/ori.jpg">
+<br>
+<br>
+<p id="title"> Lists and Loops </p>
+<a href="a2.html"> Assignment 2 </a> - 
 
-<a href="a1.html"> Assignment 1 </a>
+<br>
+<br>
+<p id="title"> Functions, Docstrings and GUIs</p>
+<a href="a3.html"> Assignment 3 </a> - 
+
+<br>
+<br>
+<p id="title"> String Manipulation and Encryption </p>
+<a href="a4.html"> Assignment 4 </a> - 
+
+<br>
+<br>
+<p id="title"> Testing and OOP </p>
+<a href="a5.html"> Assignment 5 </a> - 
+
+<br>
+<br>
+<p id="title"> File IO and Data Visualization </p>
+<a href="a6.html"> Assignment 6 </a> - 
+
+<br>
+<br>
+<p id="title"> Algorithms </p>
+<a href="a7.html"> Assignment 7 </a> - 
+
+<br>
+<br>
+<p id="title"> Software Development Project </p>
+<a href="a8.html"> Assignment 8 </a> - 
+
+<br>
+<br>
+<h3> ICS3U0 </h3>
+<p> Some of my projects from last year </p>
+
+<br>
+<p id="title"> Summative </p>
+<a href="le/summative.html"> Grade 11 Summative </a>
+
+<br>
+<br>
+<p id="title"> Loops </p>
+<a href="le/loops.html"> Assignment Loops </a>
+
+<br>
+<br>
+<p id="title"> Lists </p>
+<a href="le/lists.html"> Assignment Lists </a>
+
+<br>
+<br>
+<p id="title"> Random.py </p>
+<a href="le/random.html"> Assignment Random.py </a>
 
 	</body>
 	
