--- a/a7.html
+++ b/a7.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title> Assignment 1 </title>
+<title> Assignment 7 </title>
 
 <link rel="stylesheet" href="css/font_color.css">
 <link rel="stylesheet" href="css/theme.css">
@@ -10,7 +10,7 @@
 
 <body>
 
-<h3> Intro to Python
+<h3> Algorithms
 <h5> FILE NAME HERE
 <br>
 <br>
