--- a/le/summative.html
+++ b/le/summative.html
@@ -18,8 +18,8 @@
 <p> reference pages <a href="http://mcsp.wartburg.edu/zelle/python/graphics.py"> here </a> </p>
 
 <br>
-<p> Game Download Link - 633MB </p>
-<a href="FredWang_Summative.zip" download> Download</a>
+<p> Game Download Link - MediaFire </p>
+<a href="http://www.mediafire.com/file/4e1c3317spoacp7/FredWang_Summative.zip" download> Download</a>
 
 <br>
 <br>
