--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <h6> Download spaghetti code here</h6>
 <br>
 <h3> ICS4U0 </h3>
+<a href="thisisfine.html"> <img src="img/ori.jpg"> </a>
 <p id="title"> File Maintenance and Version Control </p>
 <a href="a0.html"> Assignment 0 </a> - Triangle Calculator
 
@@ -82,6 +83,9 @@
 <p id="title"> Random.py </p>
 <a href="le/random.html"> Assignment Random.py </a>
 
+<br><br><br><br><br>
+
+<h6> Fred Wang projects 2018 not copy righted but don't steal my work thanks </h6>
 	</body>
 	
 </html>
