--- a/index.html
+++ b/index.html
@@ -17,47 +17,47 @@
 <h3> ICS4U0 </h3>
 <a href="thisisfine.html"> <img src="img/ori.jpg"> </a>
 <p id="title"> File Maintenance and Version Control </p>
-<a href="a0.html"> Assignment 0 </a> - Triangle Calculator
+<a href="assi_sub/a0.html"> Assignment 0 </a> - Triangle Calculator
 
 <br>
 <br>
 <p id="title"> Intro to Python </p>
-<a href="a1.html"> Assignment 1 </a> - 
+<a href="assi_sub/a1.html"> Assignment 1 </a> - S and Divisible Positives
 
 <br>
 <br>
 <p id="title"> Lists and Loops </p>
-<a href="a2.html"> Assignment 2 </a> - 
+<a href="assi_sub/a2.html"> Assignment 2 </a> - 
 
 <br>
 <br>
 <p id="title"> Functions, Docstrings and GUIs</p>
-<a href="a3.html"> Assignment 3 </a> - 
+<a href="assi_sub/a3.html"> Assignment 3 </a> - 
 
 <br>
 <br>
 <p id="title"> String Manipulation and Encryption </p>
-<a href="a4.html"> Assignment 4 </a> - 
+<a href="assi_sub/a4.html"> Assignment 4 </a> - 
 
 <br>
 <br>
 <p id="title"> Testing and OOP </p>
-<a href="a5.html"> Assignment 5 </a> - 
+<a href="assi_sub/a5.html"> Assignment 5 </a> - 
 
 <br>
 <br>
 <p id="title"> File IO and Data Visualization </p>
-<a href="a6.html"> Assignment 6 </a> - 
+<a href="assi_sub/a6.html"> Assignment 6 </a> - 
 
 <br>
 <br>
 <p id="title"> Algorithms </p>
-<a href="a7.html"> Assignment 7 </a> - 
+<a href="assi_sub/a7.html"> Assignment 7 </a> - 
 
 <br>
 <br>
 <p id="title"> Software Development Project </p>
-<a href="a8.html"> Assignment 8 </a> - 
+<a href="assi_sub/a8.html"> Assignment 8 </a> - 
 
 <br>
 <br>
@@ -85,7 +85,12 @@
 
 <br><br><br><br><br>
 
+<h5> <a href=""> About me </a> 
+	 <a href=""> Contact me </a>
+	 <a href=""> Feed back </a>
+<br>
 <h6> Fred Wang projects 2018 not copy righted but don't steal my work thanks </h6>
+	
 	</body>
 	
 </html>
