--- a/sub/thisisfine.html
+++ b/sub/thisisfine.html
@@ -2,8 +2,8 @@
 
 <head>
 <link rel="icon" href="../site_icon.jpg">
-<link rel="stylesheet" href="../css/font_color.css">
-<link rel="stylesheet" href="../css/theme.css">
+<link rel="stylesheet" href="css/font_color.css">
+<link rel="stylesheet" href="css/theme.css">
 
 <title> ThisIsFine </title>
 </head>
