--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <h6> Download spaghetti code here</h6>
 <br>
 <h3> ICS4U0 </h3>
-<a href="thisisfine.html"> <img src="img/ori.jpg"> </a>
+<a href="sub/thisisfine.html"> <img src="img/ori.jpg"> </a>
+
+
 <p id="title"> File Maintenance and Version Control </p>
 <a href="assi_sub/a0.html"> Assignment 0 </a> - Triangle Calculator
 
