--- a/sub/thisisfine.html
+++ b/sub/thisisfine.html
@@ -2,15 +2,15 @@
 
 <head>
 <link rel="icon" href="../site_icon.jpg">
-<link rel="stylesheet" href="css/font_color.css">
-<link rel="stylesheet" href="css/theme.css">
+<link rel="stylesheet" href="../css/font_color.css">
+<link rel="stylesheet" href="../css/theme.css">
 
 <title> ThisIsFine </title>
 </head>
 
 <body>
 <h2> this is fine </h2>
-<a href="index.html"> <img src="../img/thisisfine.jpg"> </a>
+<a href="../index.html"> <img src="../img/thisisfine.jpg"> </a>
 
 <p> The picture from the previous page is from a game called
 <p> Ori and the Blind Forest
