--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <br>
 <br>
-<p id="title"> Lists and Loops </p>
+<p id="title"> Classes </p>
 <a href="assi_sub/a2.html"> Assignment 2 </a> - 
 
 <br>
