--- a/assi_sub/a2.html
+++ b/assi_sub/a2.html
@@ -11,16 +11,16 @@
 
 <body>
 
-<h3> Lists and Loops
-<h5> FILE NAME HERE
+<h3> Classes
+<h5> Reet
 <br>
 <br>
 <h4>
-<p id="green"> DESC HERE </p>
+<p id="green"> This is a game </p>
 <br>
 <br>
 <br>
-<a href="../projects/PROJECT.py" download> Download</a>
+<a href="../projects/Reet.zip" download> Download</a>
 <br>
 <br>
 <br>
