--- a/assi_sub/a2.html
+++ b/assi_sub/a2.html
@@ -16,7 +16,9 @@
 <br>
 <br>
 <h4>
-<p id="green"> This is a game </p>
+<p id="green"> This is a game that uses classes</p>
+<p id="green"> the game also requires graphics.py to run, it should be included in the downloads folder </p>
+<p id="green"> refer to the main python file for more intructions </p>
 <br>
 <br>
 <br>
