--- a/assi_sub/a3.html
+++ b/assi_sub/a3.html
@@ -11,16 +11,19 @@
 
 <body>
 
-<h3> Functions, Docstrings, and GUIs
-<h5> FILE NAME HERE
+<h3> File Input and Output
+<h5> HAHAYES7
 <br>
 <br>
 <h4>
-<p id="green"> DESC HERE </p>
+<p id="green"> encrypt your messages so that they're not immediately legible if someone were to glance at your screen </p>
+<p id="green"> Your program should be able to read a message from an encrypted file and decrypt it given a key. </p>
+<p id="green"> It should also give the user the option to enter plain text and write the encrypted message to a file. </p>
+
 <br>
 <br>
 <br>
-<a href="../projects/PROJECT.py" download> Download</a>
+<a href="../projects/HAHAYES7.zip" download> Download</a>
 <br>
 <br>
 <br>
