--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <br>
 <br>
 <p id="title"> Classes </p>
-<a href="assi_sub/a2.html"> Assignment 2 </a> - 
+<a href="assi_sub/a2.html"> Assignment 2 </a> - Reet Game
 
 <br>
 <br>
-<p id="title"> Functions, Docstrings and GUIs</p>
-<a href="assi_sub/a3.html"> Assignment 3 </a> - 
+<p id="title"> File Input and Output</p>
+<a href="assi_sub/a3.html"> Assignment 3 </a> - HAHAYES7
 
 <br>
 <br>
