--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <br>
 <br>
-<p id="title"> Testing and OOP </p>
+<p id="title"> Testing </p>
 <a href="assi_sub/a5.html"> Assignment 5 </a> - 
 
 <br>
