--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <br>
 <br>
-<p id="title"> String Manipulation and Encryption </p>
+<p id="title"> Testing </p>
 <a href="assi_sub/a4.html"> Assignment 4 </a> - 
 
 <br>
