--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <br>
 <br>
 <p id="title"> Testing </p>
-<a href="assi_sub/a4.html"> Assignment 4 </a> - 
+<a href="assi_sub/a4.html"> Assignment 4 </a> - HAHAYES40
 
 <br>
 <br>
-<p id="title"> Testing </p>
+<p id="title"> IDK DUDE </p>
 <a href="assi_sub/a5.html"> Assignment 5 </a> - 
 
 <br>
