--- a/assi_sub/a4.html
+++ b/assi_sub/a4.html
@@ -20,7 +20,7 @@
 <br>
 <br>
 <br>
-<a href="../projects/HAHAYES40.zip" download> Download</a>
+<a href="../projects/HAHAYES40.zip" download> Download (10mb)</a>
 <br>
 <br>
 <br>
