--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 <h1> Fred's Projects </h1>
 <h6> Download spaghetti code here</h6>
 <br>
+<h3> Personal Projects/tools </h3>
+
+<p id="title"> Raw Reaction time tester </p>
+<a href="personal/p1.html"> Reaction time </a>
+
+<br>
+<br>
+<br>
 <h3> ICS4U0 </h3>
 <a href="sub/thisisfine.html"> <img src="img/ori.jpg"> </a>
 
