--- a/index.html
+++ b/index.html
@@ -58,18 +58,8 @@
 
 <br>
 <br>
-<p id="title"> IDK DUDE </p>
-<a href="assi_sub/a5.html"> Assignment 5 </a> - 
-
-<br>
-<br>
-<p id="title"> File IO and Data Visualization </p>
-<a href="assi_sub/a6.html"> Assignment 6 </a> - 
-
-<br>
-<br>
-<p id="title"> Algorithms </p>
-<a href="assi_sub/a7.html"> Assignment 7 </a> - 
+<p id="title"> Sorting Algorithms </p>
+<a href="assi_sub/a5.html"> Assignment 5 </a> - Save_me
 
 <br>
 <br>
